Link stylesheets middleware

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/mainStyle">
+    <link rel="stylesheet" href="/static/css/style.css">
     <title>Home</title>
 </head>
 <body>
